n8n/deployment.yaml
# deployment.yaml
# created based on https://docs.n8n.io/hosting/installation/docker/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n-deployment
  namespace: nocode
spec:
  replicas: 2 # Adjust as needed
  selector:
    matchLabels:
      app: n8n
  template:
    metadata:
      labels:
        app: n8n
        version: "1.73.1" 
    spec:
      containers:
      - name: n8n-container
        image: docker.n8n.io/n8nio/n8n:1.73.1
        ports:
        - containerPort: 5678
